hphp/hack/test/typecheck/reactive/parse_multiple6.php.exp
File "parse_multiple6.php", line 3, characters 1-18:
Only one of following annotations is allowed: __Pure, __Rx, __RxShallow, __RxLocal, __NonRx. (Parsing[1002])
