hphp/hack/test/typecheck/reactive/parse_multiple6.php
<?hh // strict

<<__Rx, __RxLocal>>
function f(): void {}
